# mutual-TLS

./: CMakeLists.txt  Makefile  README.md  ssl_client.c  ssl_server.c
GmSSL-3.1.1/: CMakeLists.txt
GmSSL-3.1.1/src/: asn1.c  tls.c  x509_cer.c  x509_ext.c
client/: CMakeLists.txt  tls12_client.c
pem/: ReadMe.md
pem/abnormal/: client.crt  client.key  client_cert_chain.crt  server_cert_chain.crt
pem/abnormal2/: client.crt  client.key  client_cert_chain.crt  dca.crt  fixed_cert.sh  ori.crt  ori.key  rootca.crt  server.crt  server.key
pem/gcy/: gmcert1211.7z  gmcerts1213.7z
pem/normal/: client.crt  client.csr  client.key  client.pem  clientsigncert.cer  clientsignreq.csr  root.crt  root.csr  root.key  rootcakey.pem  server.crt  server.csr  server.key  server.pem  serversigncert.cer  serversignreq.csr
pem/normal2/: ReadMe  clientCA.cer  clientCA.csr  clientCA.key  client_cert_chain.cer  intermediateCA.cer  intermediateCA.csr  intermediateCA.key  rootCA.cer  rootCA.csr  rootCA.key  serverCA.cer  serverCA.csr  serverCA.key  server_cert_chain.cer
pem/normal_inte/: ca_chain.cer  client.pem  client_chain.cer  clientsigncert.cer  clientsignreq.csr  server.pem  server_chain.cer  serversigncert.cer  serversignreq.csr  subcacert.cer  subcakey.pem  subcareq.csr
pem/normal_inte_2/: client.pem  client_chain.cer  clientsigncert.cer  clientsignreq.csr  rootcacert.cer  server.pem  server_chain.cer  serversigncert.cer  serversignreq.csr  subcacert.cer  subcakey.pem  subcareq.csr
pem/normal_inte_3/: client.pem  client_chain.cer  (+12 more)
server/: CMakeLists.txt  tls12_server.c
(+23 files in other folders)
